# chess-dnn

./: .gitignore  CMakeLists.txt  README.md  dnn.py  main.py  requirements.txt
src/: arange.cu  batch_and_ne.cu  constants.h  create_planes.cpp  create_state.cpp  create_state.h  create_state_fast.cpp  ctpl.h  dnn.h  evaluate.cpp  main.cpp  mcts.cpp  mcts.h  move_gen.h  sq.cu
src/cuda/: arange.cu  batch_and_ne.cu  sq.cu
src/cuda/include/: arange.cuh  batch_and_ne.cuh  handle_error.cuh  sq.cuh
src/include/: arange.cuh  batch_and_ne.cuh  constants.h  create_state.h  create_state_fast.h  dnn.h  evaluate.h  handle_error.cuh  mcts.h  move_gen.h  node.h  sq.cuh
